Bug 248469 - Don't expose Konsole actions to hosting application
Summary: Don't expose Konsole actions to hosting application
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: kpart (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 230915 254472 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-20 09:16 UTC by Mathias Homann
Modified: 2013-10-22 12:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Homann 2010-08-20 09:16:18 UTC
Version:           2.9.7
OS:                Linux

in yakuake 2.9.7, the keyboard shortcut ctrl-shift-+ is assigned to "increase font size", and ctrl-shift-- is assigned to "reduce font size", and i can't seem to change those shortcuts! in joe, which is my console editor of choice, ctrl-_ is the undo function... and on a german keyboard, _ is shift-- which basically means in yakuake 2.9.7 on a german keyboard there is no undo.


Reproducible: Always

Steps to Reproduce:
set keyboard to german
edit a file in joe in a yakuake terminal
try to undo a change with ctrl_ 


Actual Results:  
the fontsize in yakuake decreases

Expected Results:  
the change in joe should be undone

OS: Linux (i686) release 2.6.34-12-pae
Compiler: gcc
Comment 1 Eike Hein 2010-08-20 09:25:01 UTC
This is a bug in Konsole that causes its shortcuts to be exposed in the Konsole KPart component which Yakuake embeds, when they shouldn't be. The only thing you can do is change the shortcuts in Konsole, sorry.
Comment 2 Mathias Homann 2010-08-20 09:41:10 UTC
i already thought of that and tried it. in konsole, those hotkeys are set to "NONE" for me, and still yakuake does the font thing.
Comment 3 Eike Hein 2010-08-20 10:30:22 UTC
Then Konsole may have changed recently so it not only exposes its shortcuts in its KPart but doesn't load the settings values, so they're always the defaults.

Yakuake's codebase has no functionality to change the font size in any way (the terminal area is provided by the Konsole KPart component, which has no API by which the hosting application could manipulate the terminal font anyway).

What I can do is blacklist and disable the actions from the Yakuake side, I've already done that for some other actions. But this really is a Konsole bug, so I'll reassign it there.

For the technical record: The actions that Konsole pollutes the hosting app's "namespace" with aren't even in the KPart's actionCollection().
Comment 4 Eike Hein 2010-08-20 10:30:43 UTC
SVN commit 1165837 by hein:

Blacklist Konsole's font actions.

CCBUG:248469


 M  +6 -0      terminal.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165837
Comment 5 Mathias Homann 2010-08-20 10:36:27 UTC
strangely enough in konsole itself those keyboard shortcuts do not work anymore after i switched them off... so i guess its only the konsole KPART that does not read its settings properly, or sumthin like that.
Comment 6 Eike Hein 2010-10-18 10:57:04 UTC
*** Bug 254472 has been marked as a duplicate of this bug. ***
Comment 7 Dmitry Samoyloff 2010-11-20 18:31:05 UTC
(In reply to comment #4)
> SVN commit 1165837 by hein:
> 
> Blacklist Konsole's font actions.
> 
> CCBUG:248469
> 
> 
>  M  +6 -0      terminal.cpp  
> 
> 
> WebSVN link: http://websvn.kde.org/?view=rev&revision=1165837

The patch didn't helped being applied against yakuake-2.9.7. This bug is a real showstopper for Bash and Emacs(-like) users :-(
Comment 8 Rene Horn 2011-04-17 12:29:31 UTC
Yeah, I can confirm that the patch doesn't work, unfortunately.
Comment 9 Rene Horn 2011-04-17 12:30:16 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Jekyll Wu 2011-08-16 03:22:41 UTC
*** Bug 230915 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2012-03-01 01:02:18 UTC
Git commit 08de49da1cf4c89c375d7eea267bce3b46c05527 by Jekyll Wu.
Committed on 01/03/2012 at 01:58.
Pushed by jekyllwu into branch 'master'.

konsolepart should not expose actions only meaningful to Konsole

Note: some actions, such as enlarging/shrinking font and setting
encoding, might actually be also useful in konsolepart. But since
konsolepart currently always use the default shortcut, the general
idea now is to expose actions as few as possible in konsolepart.
FIXED-IN: 4.9.0
REVIEW: 104034

CCMAIL: hein@kde.org

M  +43   -32   src/SessionController.cpp
M  +2    -1    src/SessionController.h

http://commits.kde.org/konsole/08de49da1cf4c89c375d7eea267bce3b46c05527
Comment 12 Ciro Santilli 2013-10-22 12:25:37 UTC
I get the ambiguous action for Ctrl+Shift+W with Yukake + Konsole.

This has been opened as a separate report here: https://bugs.kde.org/show_bug.cgi?id=319172

In Yukake, each terminal split inside a tab seems to be a Konsole part and the tabs are managed by Yukake.

Intuitively, it is expected that Ctrl+Shift+W closes a Yukake tab like in Konqueror, and this tab may contain many Konsole parts.

Interestingly, ctrl-shift-t works as expected in Yukake, so the Konsole part does not expose it. Why should it expose ctrl-shift-w be exposed then, since those actions are somewhat opposite?
It seems more logical not to expose ctrl-shift-w as well.