konsolepart should not expose actions only meaningful to Konsole

Note: some actions, such as enlarging/shrinking font and setting
encoding, might actually be also useful in konsolepart. But since
konsolepart currently always use the default shortcut, the general
idea now is to expose actions as few as possible in konsolepart.

BUG: 248469
FIXED-IN: 4.9.0
REVIEW: 104034

CCMAIL: hein@kde.org